<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddGameActivity">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_game_game_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_game_game_description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/year_released_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_game_year_released_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <EditText
        android:id="@+id/year_released_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_game_year_released"
        android:inputType="number" />

    <TextView
        android:id="@+id/type_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_game_game_type"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <NumberPicker
        android:id="@+id/typePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/logo_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_game_game_logo"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <EditText
        android:id="@+id/logo_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_game_logo_url" />

</LinearLayout>