<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <TextView
            android:id="@+id/year_released_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_textview"
            android:text="@string/item_released" />

        <TextView
            android:id="@+id/year_released_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_textview"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/year_released_title_textview"
            android:text="New Text" />

        <TextView
            android:id="@+id/type_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/year_released_title_textview"
            android:text="@string/item_game_type" />

        <TextView
            android:id="@+id/type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/year_released_title_textview"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/type_title_textview"
            android:text="New Text" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_textview"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/logo_imageview"
            android:text="@string/item_game_description"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <TextView
            android:id="@+id/favorite_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_textview"
            android:layout_marginTop="10dp"
            android:text="@string/item_favorite" />

        <Switch
            android:id="@+id/favorite_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_textview"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/favorite_title_textview" />

        <ImageView
            android:id="@+id/logo_imageview"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_textview"
            android:layout_alignBottom="@+id/favorite_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:scaleType="centerInside" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>